--- a/src/pages/contact.mustache
+++ b/src/pages/contact.mustache
@@ -44,14 +44,14 @@
 
                 </div>
 
-                <button class="navbar-toggler navbar-dark mx-3" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler navbar-dark mx-3 bg-black bg-opacity-75" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end align-items-end mx-3"
                     id="navbarSupportedContent">
-                    <div class="bg-black p-2 bg-opacity-75 rounded">
+                    <div class="bg-black p-2 bg-opacity-75 rounded mb-3">
                         <ul class="navbar-nav ">
                             <li class="nav-item">
                                 <a class="nav-link" href="/about">About</a>
@@ -112,13 +112,13 @@
                             <p>28200 Hwy 189, Bldg G Lake Arrowhead, CA 92352</p>
                         </a></li>
                     <li class="ms-3 list-group-item"><a class="text-body-secondary d-flex align-items-start"
-                            href="https://www.instagram.com/karinavanessaa_/?igsh=YzVkODRmOTdmMw%3D%3D&utm_source=qr"
+                            href="https://www.instagram.com/vanessavega_re?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
                             target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
                                 fill="currentColor" class="bi bi-instagram mx-4" viewBox="0 0 16 16">
                                 <path
                                     d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
                             </svg>
-                            <p>@karinavanessaa_</p>
+                            <p>@vanessavega_re</p>
                         </a></li>
                 </ul>
 
@@ -134,7 +134,7 @@
           action="/contact/message"
           method="POST"
         > -->
-          <!--NAME
+    <!--NAME
           <div class="mb-3 col-sm-6">
             <label for="fullname" class="form-label"> Full Name </label>
             <input
@@ -146,8 +146,8 @@
               id="fullname"
             />
           </div>-->
-  
-          <!--EMAIL
+
+    <!--EMAIL
           <div class="mb-3 col-sm-6">
             <label for="email" class="form-label"> Email address </label>
             <input
@@ -163,8 +163,8 @@
               We'll never share your email with anyone else.
             </div>
           </div>-->
-  
-          <!--PHONE
+
+    <!--PHONE
           <div class="mb-3 col-sm-6">
             <label for="phone" class="form-label">Phone</label>
             <input
@@ -176,8 +176,8 @@
               required
             />
           </div>-->
-  
-          <!--Message
+
+    <!--Message
           <div class="mb-3">
             <label for="message" class="form-label">Message</label>
             <textarea
@@ -189,8 +189,8 @@
               required
             ></textarea>
           </div>-->
-  
-          <!--SUBMIT BUTTON
+
+    <!--SUBMIT BUTTON
           <button type="submit" class="btn btn-primary">
             Send Message
           </button>
@@ -217,15 +217,16 @@
                     </div>
 
                     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                        <li class="ms-3"><a class="color-vv-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="24" height="24" fill="currentColor" class="bi bi-envelope"
-                                    viewBox="0 0 24 24">
+                        <li class="ms-3"><a class="color-vv-primary" href="mailto:vanessavegakarina@gmail.com"
+                                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    fill="currentColor" class="bi bi-envelope" viewBox="0 0 24 24">
                                     <path
                                         d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
                                 </svg></a></li>
-                        <li class="ms-3"><a class="color-vv-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="24" height="24" fill="currentColor" class="bi bi-instagram"
-                                    viewBox="0 0 24 24">
+                        <li class="ms-3"><a class="color-vv-primary"
+                                href="https://www.instagram.com/vanessavega_re?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
+                                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    fill="currentColor" class="bi bi-instagram" viewBox="0 0 24 24">
                                     <path
                                         d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.9 3.9 0 0 0-1.417.923A3.9 3.9 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.9 3.9 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.9 3.9 0 0 0-.923-1.417A3.9 3.9 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599s.453.546.598.92c.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.5 2.5 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.5 2.5 0 0 1-.92-.598 2.5 2.5 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233s.008-2.388.046-3.231c.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92s.546-.453.92-.598c.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92m-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217m0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334" />
                                 </svg></a></li>
