--- a/src/pages/index.mustache
+++ b/src/pages/index.mustache
@@ -44,14 +44,14 @@
 
                 </div>
 
-                <button class="navbar-toggler navbar-dark mx-3" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler navbar-dark mx-3 bg-black bg-opacity-75" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end align-items-end mx-3"
                     id="navbarSupportedContent">
-                    <div class="bg-black p-2 bg-opacity-75 rounded">
+                    <div class="bg-black p-2 bg-opacity-75 rounded mb-3">
                         <ul class="navbar-nav ">
                             <li class="nav-item">
                                 <a class="nav-link" href="/about">About</a>
@@ -128,10 +128,10 @@
     <div class="container-fluid bg-vv-primary">
         <footer class="mt-4 pt-2">
             <ul class="nav justify-content-center">
-                <li class="nav-item"><a href="/" class="nav-link px-2">Home</a></li>
-                <li class="nav-item"><a href="/about" class="nav-link px-2">About</a></li>
-                <li class="nav-item"><a href="/listings" class="nav-link px-2">Listings</a></li>
-                <li class="nav-item"><a href="/contact" class="nav-link px-2">Contact</a></li>
+                <li class="nav-item"><a href="/" class="nav-link px-2 color-vv-primary">Home</a></li>
+                <li class="nav-item"><a href="/about" class="nav-link px-2 color-vv-primary">About</a></li>
+                <li class="nav-item"><a href="/listings" class="nav-link px-2 color-vv-primary">Listings</a></li>
+                <li class="nav-item"><a href="/contact" class="nav-link px-2 color-vv-primary">Contact</a></li>
             </ul>
             <div class="container">
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
@@ -144,14 +144,14 @@
                     </div>
 
                     <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                        <li class="ms-3"><a class="color-vv-primary" href="#"><svg xmlns="http://www.w3.org/2000/svg"
-                                    width="24" height="24" fill="currentColor" class="bi bi-envelope"
-                                    viewBox="0 0 24 24">
+                        <li class="ms-3"><a class="color-vv-primary" href="mailto:vanessavegakarina@gmail.com"
+                                target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                                    fill="currentColor" class="bi bi-envelope" viewBox="0 0 24 24">
                                     <path
                                         d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z" />
                                 </svg></a></li>
                         <li class="ms-3"><a class="color-vv-primary"
-                                href="https://www.instagram.com/karinavanessaa_/?igsh=YzVkODRmOTdmMw%3D%3D&utm_source=qr"
+                                href="https://www.instagram.com/vanessavega_re?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr"
                                 target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                     fill="currentColor" class="bi bi-instagram" viewBox="0 0 24 24">
                                     <path
